# seo-analyzer

./: .deployignore  .gitignore  DEPLOYMENT.md  README.md  TEST_REPORT.md  check-deploy.sh  deploy.sh  main.py  nginx.conf  pyproject.toml  setup-nginx.sh  setup-vm.sh  show-logs.sh  start-backend.sh  start-frontend.sh  start-servers.sh  update.sh  vm-deploy.sh  web.conf
.claude/: .clauderc  architecture-guide.md  backend-context.md  backend_context.md  context.md  development-checklist.md  development-rules.md  frontend_context.md  instructions.md  phase3-daily-plan.md  phase3-enhancement-plan.md  qa_context.md  rule-check.md
backend/: api_docs_update_log.md  api_error_integration_results.json  error_handling_test_summary.md  performance_test_results.json  phase_timing_verification_results.json  requirements.txt  service_error_results.json  simple_error_test_results.json  test_api_error_integration.py  test_api_flat_structure.py  test_dual_field_implementation.py  test_error_scenarios.py  test_flat_structure.py  test_performance_metrics.py  test_performance_threshold_warnings.py  test_phase3_api_integration.py  test_phase3_performance.py  test_phase_timing_verification.py  test_results.json  test_service_errors.py  test_simple_error_handling.py  threshold_warning_test_results.json
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py
frontend/: .env.development  .env.local.example  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: update_context.py
(+187 files in other folders)
