[project]
name = "seo-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.35.0",
]
