[project]
name = "seo-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.12.15",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml==6.0.1",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "selenium>=4.35.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "pytest-mock>=3.14.1",
    "responses>=0.25.8",
]
